<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/searchForm"
    android:background="#ffe0ffcc"
    android:longClickable="true"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_marginTop="72dp"
        android:textSize="24sp"
        android:textColor="#ff0000ff"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemName1"
        android:id="@+id/keywordTitle"
        android:layout_marginTop="45dp"
        android:textColor="#ff5a6662"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:focusableInTouchMode="true"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemName2"
        android:id="@+id/pricefTitle"
        android:layout_marginTop="30dp"
        android:textColor="#ff5a6662"
        android:textSize="16sp"
        android:layout_below="@+id/keywordTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/keywordText"
        android:layout_above="@+id/pricefTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textNoSuggestions|text"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:focusable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/pricefText"
        android:enabled="true"
        android:layout_alignBottom="@+id/pricefTitle"
        android:layout_alignLeft="@+id/keywordText"
        android:layout_alignStart="@+id/keywordText"
        android:inputType="numberSigned|numberDecimal"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemName3"
        android:id="@+id/pricetTitle"
        android:textColor="#ff5a6662"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/pricefTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/pricetText"
        android:enabled="true"
        android:layout_alignBottom="@+id/pricetTitle"
        android:layout_alignLeft="@+id/pricefText"
        android:layout_alignStart="@+id/pricefText"
        android:inputType="numberSigned|numberDecimal"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemName4"
        android:id="@+id/sortTitle"
        android:textColor="#ff5a6662"
        android:textSize="16sp"
        android:layout_below="@+id/pricetTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sortBy"
        android:layout_alignBottom="@+id/sortTitle"
        android:layout_alignTop="@+id/sortTitle"
        android:layout_alignLeft="@+id/pricetText"
        android:layout_alignStart="@+id/pricetText"
        android:layout_alignRight="@+id/pricetText"
        android:layout_alignEnd="@+id/pricetText"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemName5"
        android:id="@+id/clearButton"
        android:onClick="Clear"
        android:layout_below="@+id/sortBy"
        android:layout_alignLeft="@+id/sortBy"
        android:layout_alignStart="@+id/sortBy"
        android:layout_marginTop="35dp"
        android:background="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemName6"
        android:onClick="Search"
        android:id="@+id/searchButton"
        android:background="#ffffffff"
        android:longClickable="false"
        android:layout_alignTop="@+id/clearButton"
        android:layout_toRightOf="@+id/clearButton"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/resultText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff0000" />

</RelativeLayout>
